--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "aws-cognito-redux-saga": "^1.5.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
