--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.7",
     "aws-cognito-redux-saga": "^1.5.10",
+    "axios": "^0.26.1",
+    "fetch": "^1.1.0",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
