--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
     "react-spotify-web-playback": "^0.9.1",
+    "tailwind-scrollbar": "^1.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
