--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "^5.0.0",
     "react-spotify-web-playback": "^0.9.1",
     "tailwind-scrollbar": "^1.3.1",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
