--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-spotify-web-playback": "^0.9.1",
+    "request": "^2.88.2",
     "tailwind-scrollbar": "^1.3.1",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.13",
