--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-cognito-redux-saga": "^1.5.10",
     "axios": "^0.26.1",
     "fetch": "^1.1.0",
+    "google-geocoder": "^0.2.1",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
