--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "google-geocoder": "^0.2.1",
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-spotify-api": "^3.0.0",
+    "react-spotify-auth": "^1.4.3",
     "react-spotify-web-playback": "^0.9.1",
     "request": "^2.88.2",
     "tailwind-scrollbar": "^1.3.1",
