--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spotify-api": "^3.0.0",
     "react-spotify-auth": "^1.4.3",
     "react-spotify-web-playback": "^0.9.1",
+    "react-toastify": "^8.2.0",
     "request": "^2.88.2",
     "tailwind-scrollbar": "^1.3.1",
     "util": "^0.12.4",
