--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-spotify-web-playback": "^0.9.1",
     "react-toastify": "^8.2.0",
     "request": "^2.88.2",
+    "store": "^2.0.12",
     "tailwind-scrollbar": "^1.3.1",
     "util": "^0.12.4",
     "uuid": "^8.3.2",
